--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
     <script> var DNTDEMOCOUNT = 29;</script>
     <script src="js/main.js?v=11"></script>
     <script>
+	    alert(1);
+	
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
                 (i[r].q = i[r].q || []).push(arguments)
